--- a/config/database.config.json
+++ b/config/database.config.json
@@ -10,7 +10,7 @@
     "username": "386168",
     "password": "NULLCommand1.HashPassword@",
     "database": "genai-openfxt_db",
-    "host": "mysql-genai-openfxt.alwaysdata.net",
+    "host": "127.0.0.1",
     "dialect": "mariadb"
   }
 }
