--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,6 @@ jobs:
          .production.password = $password |
          .production.database = $database' \
         config/database.config.json > tmp.json && mv tmp.json config/database.config.json
-        cat config/database.config.json
 
     - name: Install dependencies
       run: npm install
@@ -36,9 +35,9 @@ jobs:
     - name: Copy to hosting
       uses: appleboy/scp-action@master
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        password: ${{ secrets.SSH_PASSWORD }}
         port: 22
         source: "./*"
         target: "~/public_html"
