--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,11 @@ jobs:
       with:
         ref: ${{ github.ref_name }}
 
+    - name: Setup nodejs version 20.17.0
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.17.0
+
     - name: Replace database credentials in production config
       env:
         DB_USERNAME: ${{ secrets.DB_USERNAME }}
