Improved hosting, DB configuration, TTS endpoints (authentication & v2) and error handling.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "openfxt-generative-ai-api",
   "version": "2.0.0",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon hosting.js",
     "deploy": "ssh -R public-openfxt:80:localhost:8080 serveo.net"
   },
   "keywords": [],
