--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,4 +61,4 @@ jobs:
         port: 22
         script: |
           cd /workspace/Project1
-          pm2 restart 0
+          ~/.nvm/versions/node/v20.19.0/bin/pm2 restart 0
