--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,20 +34,15 @@ jobs:
          .production.database = $database' \
         config/database.config.json > tmp.json && mv tmp.json config/database.config.json
 
-    - name: Install dependencies
-      run: npm install
-
     - name: Remove .git folder
       run: rm -rf .git
 
-    - name: Copy to hosting
-      uses: appleboy/scp-action@master
+    - name: Deploy
+      uses: Techie-Pi/node-vps-deployment@main
       with:
+        remote-path: "/workspaces/Project1"
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
-        password: ${{ secrets.SSH_PASSWORD }}
         port: 22
-        source: "./*"
-        target: "/workspaces/Project1"
-        rm: false
-        overwrite: true
+        password: ${{ secrets.SSH_PASSWORD }}
+        pm2-id: "0"
