--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,4 +43,7 @@ jobs:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_PASSWORD }}
-        script: source ~/.bashrc && pm2 restart 0
+        script: |
+          export PATH=$PATH:/root/.nvm/versions/node/v20.19.0/bin
+          which pm2
+          pm2 restart 0
